--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-
+<a href="{{ url_for('crear_producto') }}" class="btn btn-success mb-3">Agregar producto</a>
 
 <h1>Lista de Productos</h1>
 
