--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
             <td>{{ producto.stock }}</td>
             <td>{{ producto.categoria_id }}</td>
             <td>
-                
+                <a href="{{ url_for('eliminar_producto', id=producto.id) }}" class="btn btn-danger">Eliminar</a>
                 <a href="{{ url_for('editar_producto', id=producto.id) }}" class="btn btn-warning">Actualizar</a>
             </td>
         </tr>
