--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <!-- Bulma CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <div class="container mt-4">
-        <h1 class="text-center">T I E N D A</h1>
-        <hr>
+    <section class="section">
         <div class="container">
+            <h1 class="title has-text-centered">T I E N D A</h1>
+            <hr>
             {% block content %}{% endblock %}
         </div>
-    </div>
+    </section>
 </body>
 </html>
